--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,79 @@
-*{
+* {
   padding: 0;
   margin: 0;
-  box-sizing:border-box;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  background: #f8f9fa;
+}
+.container {
+  position: relative;
+  width: 100%;
+  min-width: 100vh;
+  color: #999;
+  background-color: red;
+}
+.container__forms {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.form__title {
+  font-size: 2.5em;
+  color: #333333;
+  margin-bottom: 15px;
+}
+.form__input-field {
+  width: 100%;
+  max-width: 380px;
+  height: 55px;
+  display: grid;
+  background: #fff;
+  margin: 10px 0;
+  padding: 0.4em;
+  border-radius: 8px;
+  grid-template-columns: 15% 85%;
+}
+.form__input-field span {
+  text-align: center;
+  line-height: 40px;
+  color: #acacac;
+  font-size: 1.35rem;
+}
+.form__input-field input {
+  border: none;
+  outline: none;
+  background: none;
+  line-height: 1;
+  font-weight: 700;
+  font-size: 0.9rem;
+  color: #333333;
+}
+.form__input-field input::placeholder {
+  color: #aaaaaa;
+}
+
+/*------------------button------------------*/
+.form__login-btn {
+  border: 1px transparent;
+  cursor: pointer;
+  width: 150px;
+  height: 45px;
+  outline: none;
+  border-radius: 45px;
+  background: #c5f5f0;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #333333;
+  margin: 15px 0;
+  transition: 0.5s;
 }
