--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,204 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto Condensed", sans-serif;
+  text-decoration: none;
+}
+body {
+  min-height: 110vh;
+}
+
+/* -----------------------------------navbar----------------------------------- */
+header {
+  z-index: 100;
+  position: fixed;
+  background: #1f7a8c;
+  background: #222;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 15px 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.8s ease;
+  border-bottom: 1px #fff solid;
+}
+header.static {
+  background: #1f7a8c;
+  padding: 10px 200px;
+  border: none;
+}
+.navbar__logo {
+  color: #fff;
+  font-size: 1.8em;
+  font-weight: 700;
+  letter-spacing: 1.3px;
+}
+.navbar__links {
+  position: relative;
+}
+.navbar__links a {
+  color: #fff;
+  font-size: 1em;
+  font-weight: 400;
+  margin-left: 30px;
+  transition: 0.8s ease;
+}
+.navbar__links a:hover {
+  color: #1f7a8c;
+}
+header.static .navbar__links a:hover {
+  color: #222;
+}
+
+/* -----------------------------------home----------------------------------- */
+section {
+  padding: 100px 200px;
+}
+.home {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background: #111;
+}
+.home__content {
+  max-width: 800px;
+}
+.home__content h2 {
+  color: #fff;
+  font-size: 2em;
+  font-weight: 500;
+}
+.home__content h2 span {
+  font-size: 2.8em;
+  font-weight: 700;
+}
+.animated-text {
+  position: relative;
+  height: 70px;
+  overflow: hidden;
+}
+.animated-text h3 {
+  color: #1f7a8c;
+  font-size: 3em;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: 1px;
+}
+.animated-text h3:nth-child(1) {
+  animation: move-text 12s infinite;
+}
+.btn {
+  margin-top: 25px;
+  display: inline-block;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 10px 20px;
+  color: #fff;
+  background: #1f7a8c;
+  font-size: 1em;
+  font-weight: 600;
+  letter-spacing: 1.1px;
+  border-radius: 1.5px;
+  transition: 0.8s ease;
+}
+.btn:hover {
+  background: #153e46;
+}
+.home__media {
+  margin-top: 50px;
+}
+.home__media a {
+  color: #fff;
+  font-size: 40px;
+  margin-right: 30px;
+}
+/* animations */
+@keyframes move-text {
+  0% {
+    margin-top: 0;
+  }
+  25% {
+    margin-top: -70px;
+  }
+  50% {
+    margin-top: -140px;
+  }
+  75% {
+    margin-top: -70px;
+  }
+  100% {
+    margin-top: 0px;
+  }
+}
+
+/* -----------------------------------Bio----------------------------------- */
+.bio {
+  background: #fafdf6;
+}
+.bio__title {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.title {
+  position: relative;
+  color: #1f7a8c;
+  font-size: 2.2em;
+  font-weight: 700;
+  margin-bottom: 60px;
+}
+.title:before {
+  content: "";
+  position: absolute;
+  top: 56px;
+  left: 50%;
+  width: 140px;
+  height: 2px;
+  background: #1f7a8c;
+  transform: translateX(-50%);
+}
+.title:after {
+  content: "";
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #1f7a8c;
+  transform: translateX(-50%);
+}
+.bio .bio__content {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.bio .bio__content .left-col {
+  position: relative;
+  width: 45%;
+}
+.bio .bio__content .right-col {
+  position: relative;
+  width: 50%;
+}
+.bio .bio__content .left-col .bio__card {
+  position: relative;
+  width: 100%;
+  min-height: 450px;
+}
+.bio .bio__content .left-col .bio__card img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
