--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@
 body {
   min-height: 110vh;
 }
-
+a {
+  color: #000;
+}
 /* -----------------------------------navbar----------------------------------- */
 header {
   z-index: 100;
@@ -214,7 +216,7 @@ section {
   justify-content: center;
   flex-wrap: wrap;
   flex-direction: row;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 .title p {
   font-size: 1em;
@@ -256,3 +258,47 @@ section {
   font-weight: 700;
   margin: 10px;
 }
+/*  ----------------------------------- contact ways----------------------------------- */
+.contact .content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-top: 20px;
+}
+.contact .content .row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.contact .content .row .card {
+  display: flex;
+  justify-content: center;
+  width: 240px;
+  margin: 20px;
+  padding: 25px;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 8px;
+  box-shadow: 0 5px 25px rgba(31, 122, 140, 0.3);
+}
+.contact .content .row .card .contact-icon span {
+  text-align: center;
+  align-items: center;
+  font-size: 3.5em;
+  color: #1f7a8c;
+  transition: transform 0.8s ease;
+}
+.contact .content .row .card:hover .contact-icon span {
+  transform: translateY(-10px);
+}
+.contact .content .row .card .info h3 {
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 10px;
+  text-align: center;
+  justify-content: center;
+  color: #1f7a8c;
+}
+/*  -----------------------------------contact form----------------------------------- */
