--- a/css/style.css
+++ b/css/style.css
@@ -404,13 +404,16 @@ section {
 img {
   width: 100%;
 }
-.pics {
+.image {
+  display: inline-flex;
+  position: relative;
   width: 100%;
 }
-.pics img {
+.image img {
   width: 100%;
 }
 .galery-row {
+  background: #111;
   margin-top: 58px;
   display: flex;
   padding: 5px;
@@ -422,6 +425,52 @@ img {
 }
 .column a img {
   margin-top: 5px;
+}
+/* image effect */
+.image__img {
+  display: block;
+  width: 100%;
+}
+.image__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  color: #1f7a8c;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  opacity: 0;
+  backdrop-filter: blur(5px);
+  transition: opacity 0.8s ease;
+}
+.image__overlay:hover {
+  opacity: 1;
+}
+.image__overlay > * {
+  transform: translateY(10px);
+  transition: transform 0.8s ease;
+}
+.image__overlay:hover > * {
+  transform: translateY(0);
+  transition: transform 0.8s ease;
+}
+.image__title {
+  font-size: 3em;
+  font-weight: 700;
+  -webkit-text-stroke: 0.5px #fff;
+  color: transparent;
+}
+.image__text {
+  font-size: 2.8em;
+  font-weight: 500;
+  margin-top: 0.5em;
+  -webkit-text-stroke: 0.5px #fff;
+  color: transparent;
 }
 
 /*  -----------------------------------responsive----------------------------------- */
