--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ section {
 }
 .bio p {
   color: #6b705c;
+  font-size: 1.2em;
 }
 .bio__title {
   width: 100%;
@@ -234,8 +235,8 @@ section {
   flex-direction: row;
   margin-top: 100px;
 }
-.title p {
-  font-size: 1em;
+#progress p {
+  font-size: 1.2em;
   width: 80%;
 }
 #progress .content .card {
