--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,16 @@ section {
   height: 100%;
   object-fit: contain;
 }
+.bio .bio__content .left-col .bio__card iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+#project {
+  width: 100%;
+  height: 100%;
+}
 /*  -----------------------------------progress ----------------------------------- */
 #progress {
   margin-bottom: 50px;
@@ -584,5 +594,10 @@ img {
 @media (max-width: 1200px) {
   .column {
     flex: 100%;
+  }
+}
+@media (max-width: 1020px) {
+  .bio .bio__content .right-col {
+    margin-top: 60px;
   }
 }
