--- a/css/style.css
+++ b/css/style.css
@@ -455,9 +455,10 @@ img {
   display: flex;
   padding: 5px;
   flex-wrap: wrap;
+  min-height: 100vh;
 }
 .column {
-  flex: 20%;
+  flex: 15%;
   padding: 5px;
 }
 .column a img {
@@ -489,7 +490,7 @@ img {
   opacity: 1;
 }
 .image__overlay > * {
-  transform: translateY(10px);
+  transform: translateY(5px);
   transition: transform 0.8s ease;
 }
 .image__overlay:hover > * {
@@ -497,15 +498,15 @@ img {
   transition: transform 0.8s ease;
 }
 .image__title {
-  font-size: 3em;
+  font-size: 2em;
   font-weight: 700;
   -webkit-text-stroke: 0.5px #fff;
   color: transparent;
 }
 .image__text {
-  font-size: 2.8em;
+  font-size: 2em;
   font-weight: 500;
-  margin-top: 0.5em;
+  margin-top: 0.2em;
   -webkit-text-stroke: 0.5px #fff;
   color: transparent;
 }
