--- a/css/style.css
+++ b/css/style.css
@@ -227,8 +227,13 @@ section {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  justify-content: center;
-  align-items: center;
+}
+#project {
+  width: 100%;
+  height: 100%;
+}
+.weeks{
+  max-height: 100vh;
 }
 /*  -----------------------------------progress ----------------------------------- */
 #progress {
@@ -318,13 +323,10 @@ section {
   flex-direction: column;
   margin-top: 20px;
 }
- /*responsive for contact*/
 .contact .content .row {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  flex: 50%;
-  min-height: 100vh;
   flex-direction: row;
 }
 .contact .content .row .card {
@@ -437,9 +439,6 @@ section {
 }
 .footer a {
   color: #fff;
-}
-#project{
-  min-width: 100%;
 }
 /*  -----------------------------------Galery----------------------------------- */
 img {
@@ -627,9 +626,6 @@ img {
   }
 }
 @media (width: 1840px){
-  .row{
-    height: 80%;
-  }
   .contact-form{
     margin: 70px 70px;
   }
