--- a/css/style.css
+++ b/css/style.css
@@ -227,13 +227,8 @@ section {
   width: 100%;
   height: 100%;
   object-fit: contain;
-}
-#project {
-  width: 100%;
-  height: 100%;
-}
-.weeks{
-  max-height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
 /*  -----------------------------------progress ----------------------------------- */
 #progress {
@@ -440,6 +435,9 @@ section {
 .footer a {
   color: #fff;
 }
+#project{
+  min-width: 100%;
+}
 /*  -----------------------------------Galery----------------------------------- */
 img {
   width: 100%;
@@ -627,6 +625,6 @@ img {
 }
 @media (width: 1840px){
   .contact-form{
-    margin: 70px 70px;
+    margin: 70px;
   }
 }
