--- a/css/style.css
+++ b/css/style.css
@@ -623,7 +623,7 @@ img {
     max-height: 30px;
   }
 }
-@media (max-width: 1839px){
+@media (width: 1839px){
   .contact-form{
     margin: 70px;
   }
