--- a/css/style.css
+++ b/css/style.css
@@ -623,8 +623,13 @@ img {
     max-height: 30px;
   }
 }
-@media (width: 1839px){
+@media (max-width: 1839px){
   .contact-form{
     margin: 70px;
+  }
+}
+@media (min-width: 1839px){
+  .contact-form{
+    margin: 20px;
   }
 }
